Move main ns